--- a/serverless.yml
+++ b/serverless.yml
@@ -20,6 +20,11 @@ service: osc-contactform # NOTE: update this with your service name
 provider:
   name: aws
   runtime: nodejs8.10
+  iamRoleStatements:
+  - Effect: "Allow"
+    Action:
+      - "ses:SendEmail"
+    Resource: ["*"]
 
 # you can overwrite defaults here
 #  stage: dev
@@ -55,9 +60,16 @@ provider:
 #    - exclude-me-dir/**
 
 functions:
-  hello:
-    handler: handler.hello
-
+  contactform:
+    handler: handler.contactform
+    events:
+      - http:
+          method: post
+          path: contact
+          cors: true
+    environment:
+      RECAPTCHA_SECRET: ${ssm:oscReCaptchaSecret}
+          
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
