--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5",
     "serverless": "^1.30.3"
+  },
+  "scripts": {
+    "test": "echo \"No tests yet\""
   }
 }
