--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Nick Meyer",
   "license": "MIT",
   "dependencies": {
+    "aws-sdk": "^2.306.0",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5",
     "serverless": "^1.30.3"
