--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "eslint-plugin-prettier": "^2.6.2",
     "prettier": "^1.14.2",
-    "serverless": "^1.30.3"
+    "serverless": "^1.30.3",
+    "serverless-domain-manager": "^2.6.5"
   }
 }
