--- a/serverless.yml
+++ b/serverless.yml
@@ -67,6 +67,7 @@ custom:
     domainName: sls.omahasymphonicchorus.org
     basePath: ''
     stage: ${self:provider.stage}
+    createRoute53Record: false
 
 functions:
   contactform:
