--- a/serverless.yml
+++ b/serverless.yml
@@ -20,6 +20,7 @@ service: osc-serverless # NOTE: update this with your service name
 provider:
   name: aws
   runtime: nodejs8.10
+  memorySize: 128
   iamRoleStatements:
   - Effect: "Allow"
     Action:
