donation sandbox works

--- a/serverless.yml
+++ b/serverless.yml
@@ -90,6 +90,9 @@ functions:
           method: post
           path: process-donation
           cors: true
+    environment:
+      SQUARE_ACCESS_TOKEN: ${ssm:SquareSandboxAccessToken}
+      LOCATION_ID: ${ssm:SquareSandboxLocationID}
           
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
