--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "aws-sdk": "^2.306.0",
     "request": "^2.88.0",
-    "request-promise-native": "^1.0.5"
+    "request-promise-native": "^1.0.5",
+    "square-connect": "^2.20180918.0",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "test": "echo \"No tests yet\""
